--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.h2.console.enabled=true
-management.endpoints.web.exposure.include=*
-spring.jpa.hibernate.ddl-auto=none
-spring.jackson.serialization.fail-on-empty-beans=false
+#spring.h2.console.enabled=true
+#management.endpoints.web.exposure.include=*
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jackson.serialization.fail-on-empty-beans=false
+#feature.food.process.new=false
+#spring.application.name=producer
